# OpenUxAS-SoI

./: .Brewfile  .gitignore  .gitmodules  .travis.yml  Jenkinsfile  LICENSE.md  Makefile  README.md  README_BranchInstall.md  README_Install_RTA_ZSRM_Version.md  RunLmcpGen.py  RunLmcpGen.sh  boost.wrap.tmpl  build_documentation.sh  checkout_plus_config.sh  cppzmq.wrap.tmpl  czmq.wrap.tmpl  get_dlvsco_wd_b_f.sh  get_dlvsco_wd_f.sh  install_AADL_stuff.sh  install_most_deps.sh  install_prerequisites.sh  meson.build  meson_options.txt  minizip.wrap.tmpl  prepare  rm-external  serial.wrap.tmpl  sqlite3.wrap.tmpl  sqlitecpp.wrap.tmpl  zeromq.wrap.tmpl  zlib.wrap.tmpl  zyre.wrap.tmpl
3rd/PugiXML/: meson.build
3rd/TinyGPS/: TinyGPS.cpp  TinyGPS.h  meson.build
3rd/TinyGPS_NoBoost/: meson.build
3rd/serial-1.2.1/: meson.build
src/Communications/: AddressStringMessageReceiverPipe.cpp  AddressStringMessageReceiverPipe.h  AddressStringMessageSenderPipe.cpp  AddressStringMessageSenderPipe.h  AddressedAttributedMessage.cpp  AddressedAttributedMessage.h  AddressedMessage.h  ImpactSubscribePushBridge.cpp  ImpactSubscribePushBridge.h  LmcpMessage.h  LmcpObjectMessageReceiverPipe.cpp  LmcpObjectMessageReceiverPipe.h  LmcpObjectMessageSenderPipe.cpp  LmcpObjectMessageSenderPipe.h  LmcpObjectMessageTcpReceiverSenderPipe.cpp  LmcpObjectMessageTcpReceiverSenderPipe.h  LmcpObjectNetworkBridgeManager.cpp  LmcpObjectNetworkBridgeManager.h  LmcpObjectNetworkClientBase.cpp  LmcpObjectNetworkClientBase.h  LmcpObjectNetworkPublishPullBridge.cpp  LmcpObjectNetworkPublishPullBridge.h  LmcpObjectNetworkSerialBridge.cpp  LmcpObjectNetworkSerialBridge.h  LmcpObjectNetworkServer.cpp  LmcpObjectNetworkServer.h  LmcpObjectNetworkSubscribePushBridge.cpp  LmcpObjectNetworkSubscribePushBridge.h  LmcpObjectNetworkTcpBridge.cpp  LmcpObjectNetworkTcpBridge.h  LmcpObjectNetworkZeroMqZyreBridge.cpp  LmcpObjectNetworkZeroMqZyreBridge.h  MessageAttributes.h  SerialHelper.h  SocketConfiguration.h  TransportBase.h  TransportReceiverBase.cpp  TransportReceiverBase.h  ZeroMqAddressStringReceiver.cpp  ZeroMqAddressStringReceiver.h  (+18 more)
src/DPSS/: CoordinateConversions.cpp  DRand.cpp  DRand.h  Dpss.cpp  Dpss.h  DpssApi.cpp  DpssDataTypes.cpp  DpssDataTypes.h  DpssDefs.h  DpssLoiterPoint.h  DpssState.h  DpssUtilities.cpp  DpssWaypoint.h  ObjectiveParameters.h  PlanOffset.cpp  PlanPrecisely.cpp  PlanQuickly.cpp  SegmentMap.cpp  SegmentMap.h  SensorSteering2.cpp  SmoothPathInput.h  VehicleGoToPoint.h  VehiclePoint.h  VehicleTelemetry.h  VehicleValue.h  meson.build
src/Plans/: Assignment.h  BaseObject.h  CGrid.cpp  CGrid.h  Circle.h  Edge.cpp  Edge.h  HeadingParameters.h  PathInformation.h  PlanningParameters.h  PlansLib.vcproj  PlansLib.vcxproj  Polygon.cpp  Polygon.h  Position.cpp  Position.h  SensorType.h  TaskAssignment.h  Trajectory.cpp  Trajectory.h  TrajectoryParameters.h  VehicleBase.h  VehicleParameters.h  VisibilityGraph.cpp  VisibilityGraph.h  Waypoint.cpp  Waypoint.h  meson.build  rasSensorParameters.h
src/Services/: 00_NewService.py  00_ServiceList.h  00_ServiceTemplate.cpp  00_ServiceTemplate.h  01_HelloWorld.cpp  01_HelloWorld.h  AdapterServiceHelper.h  AssignmentTreeBranchBoundBase.cpp  AssignmentTreeBranchBoundBase.cpp.save  AssignmentTreeBranchBoundBase.h  AssignmentTreeBranchBoundBase.h.save  AssignmentTreeBranchBoundService.cpp  AssignmentTreeBranchBoundService.h  AutomationDiagramDataService.cpp  AutomationDiagramDataService.h  AutomationRequestValidatorService.cpp  AutomationRequestValidatorService.h  BackToBeginAttack.cpp  BackToBeginAttack.h  BatchSummaryService.cpp  BatchSummaryService.h  CollisionAvoidanceService.cpp  CollisionAvoidanceService.hpp  DAIDALUE_WCV_Detection.h  DAIDALUS_WCV_Detection.cpp  DAIDALUS_WCV_Detection.h  DAIDALUS_WCV_Response.cpp  DAIDALUS_WCV_Response.h  DosAttack.cpp  DosAttack.h  GamsPlatformUXAS.hpp  GamsService.cpp  GamsService.h  GamsServiceDriver.cpp  GamsServiceDriver.h  HelloRust.cpp  HelloRust.h  IcarousCommunicationService.cpp  IcarousCommunicationService.h  LoiterLeash.cpp  (+60 more)
src/Tasks/: 00_NewTask.py  00_TaskTemplate.cpp  00_TaskTemplate.h  AngledAreaSearchTaskService.cpp  AngledAreaSearchTaskService.h  AssignmentCoordinatorTaskService.cpp  AssignmentCoordinatorTaskService.h  BlockadeTaskService.cpp  BlockadeTaskService.h  CmasiAreaSearchTaskService.cpp  CmasiAreaSearchTaskService.h  CmasiLineSearchTaskService.cpp  CmasiLineSearchTaskService.h  CmasiPointSearchTaskService.cpp  CmasiPointSearchTaskService.h  CommRelayTaskService.cpp  CommRelayTaskService.h  CordonTaskService.cpp  CordonTaskService.h  DynamicTaskServiceBase.cpp  DynamicTaskServiceBase.h  EscortTaskService.cpp  EscortTaskService.h  ImpactLineSearchTaskService.cpp  ImpactLineSearchTaskService.h  ImpactPointSearchTaskService.cpp  ImpactPointSearchTaskService.h  LoiterTaskService.cpp  LoiterTaskService.h  MultiVehicleWatchTaskService.cpp  MultiVehicleWatchTaskService.h  MustFlyTaskService.cpp  MustFlyTaskService.h  OverwatchTaskService.cpp  OverwatchTaskService.h  PatternSearchTaskService.cpp  PatternSearchTaskService.h  RendezvousTask.cpp  RendezvousTask.h  TaskManagerService.cpp  (+10 more)
src/Utilities/: Algebra.cpp  Algebra.h  AlgebraBase.h  CallbackTimer.cpp  CallbackTimer.h  DubinsUtilities.cpp  DubinsUtilities.h  FileSystemUtilities.cpp  FileSystemUtilities.h  FlatEarth.cpp  FlatEarth.h  Permute.cpp  Permute.h  RouteExtension.cpp  RouteExtension.h  STaliroCommInterface.cpp  STaliroCommInterface.h  STaliroTrajectoryPopulator.cpp  STaliroTrajectoryPopulator.h  SensorSteering.cpp  SensorSteering.h  TimeUtilities.cpp  TimeUtilities.h  UnitConversions.cpp  UnitConversions.h  UxAS_ConfigurationManager.cpp  UxAS_ConfigurationManager.h  UxAS_ConsoleLogger.cpp  UxAS_ConsoleLogger.h  UxAS_DatabaseLogger.cpp  UxAS_DatabaseLogger.h  UxAS_DatabaseLoggerHelper.cpp  UxAS_DatabaseLoggerHelper.h  UxAS_FileLogger.cpp  UxAS_FileLogger.h  UxAS_FileUtil.h  UxAS_HeadLogDataDatabaseLogger.cpp  UxAS_HeadLogDataDatabaseLogger.h  UxAS_LexicalAnalyzer.cpp  UxAS_LexicalAnalyzer.h  (+20 more)
tests/: GTestSetupOnWindows.md  meson.build  meson_old.build
(+2881 files in other folders)
